--- a/_quarto.yml
+++ b/_quarto.yml
@@ -2,7 +2,7 @@ project:
   type: website
 
 website:
-  title: "New_DSI_quartoblog"
+  title: "Data Science Initiative"
   navbar:
     right:
       - about.qmd
